@@ -1,3 +1,4 @@
+- devprop_generate_string optimized by cparm
 - Update CPUID and change conditional logic.
 - Typo & ID names
 - Make compile on gcc w/ errors enabled.
